# scanpath_gaze_dynamics_HMM

./: README.md  pyproject.toml
smac/: cluster_v2.py  model_training.py  plot_rois.py  visualization.py
smac/smac/: cluster.py  cluster_3.py  hmm_learn.py  model_training_v2.py  prediction.py  utils.py  vbhmm_learn.py
smac/tests/: test_utils.py
tests/: demo.py  demo2.py  demo3.py
